# coding-test

./: Cargo.toml  README.md  test  test.csv  test_generator.sh
src/: account.rs  accounts_handler.rs  lib.rs  main.rs
tests/: integration_test.rs
