[package]
name = "coding-test"
description = "Transaction payments engine for Kraken coding challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
csv-async = { version = "1.2.4", features = ["tokio"] }
dashmap = "5.4.0"
futures = "0.3.24"
rust_decimal = "1.26.1"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.9"

[dev-dependencies]
rust_decimal_macros = "1.26"
